--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -585,8 +585,7 @@ São necessidades por serviços que envolvam soluções de Tecnologia da Informa
 | NS29 | Disponibilizar acesso e treinamento à COGEP para publicação de conteúdos na intranet                                                                  |                                                                                                                                                                                                                         | SGE              | 
 | NS30 | Reformular Portal institucional                                                        |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  | SEFIC, GM, SGE    | 
 | NS31 |                                                     |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |            | 
-| NS32 | Disponibilizar sistema de gestão de capacitação                                                                      | 
-| SGE              | 
+| NS32 | Disponibilizar sistema de gestão de capacitação                                                                      |  | SGE              | 
 | NS33 | Disponivilizar sistema para controle de atendimentos telefônicos e presenciais                                            |                                                                                                                                                                                                                                                                                                    | GM, SGE          | 
 | NS34 | Sistema de controle de reembolsos                                                           | Realizar o registros de lançamentos de reembolsos;  alertar sobre prazos para cobranças aos servidores relativos às regras estabelecidas na legislação do Programa de Incentivos Educacionais do MinC. Realizar controle orçamentário, emitir relatórios e gráficos.                                                                                                                                                                                                                                                                                                        | SGE,              | 
 | NS35 | Sistema de endomarketing                                                                    | Desenvolvimento de Sistema                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  | SEFIC             | 
