--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -648,34 +648,34 @@ São necessidades por equipamentos de Tecnologia da Informação e Comunicação
 
 | ID   | Necessidade                                                                               | Descrição                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              | Áreas Demandantes                             | 
 |------|-------------------------------------------------------------------------------------------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-----------------------------------------------| 
-| NE1  | Aquisição de tokens para os servidores da COGEP, bem a renovação de certificados a vencer | Aquisição é necessária para acesso de todos os servidores da COGEP aos sistema SIAPE, AFD e demais módulos do SIGEPE disponibilizados pelo MP. O certificado tem validade de média de 2 anos. Observamos que hoje a área tem aproximademente 30 servidores com token, havendo ainda carência de certificados. Necessitamos desse Infraestrutura para utilização do sistema Comprasnet (SIASG) por todos os pregoeiros, pois só podem conduzir sessões públicas de pregão após devida certificação digital no sistema.  | SGE, SPOA,                                    | 
-| NE2  | Aumento na capacidade da caixa de e-mail e no armazenamento da pasta Kronos.              | Aumento da capacidade de envio e recebimento de mensagens e no armazenamento, tendo em vista o fluxo de vídeos, apresentações, planilhas, e outros arquivos necessários para a realização do trabalho da ASCOM.                                                                                                                                                                                                                                                                                                        | GM,                                           | 
-| NE3  | Certificação digital                                                                      | Necessitamos desse serviço para utilização do sistema Comprasnet (SIASG) por todos os pregoeiros, pois só podem conduzir sessões públicas de pregão após devida certificação digital no sistema.                                                                                                                                                                                                                                                                                                                       | SGE, SPOA,                                    | 
-| NE4  | Computadores completos                                                                    | Computador com capacidade de memória maior, mais veloz e com configuração que suporte rodar, com eficiência, os programas de design.                                                                                                                                                                                                                                                                                                                                                                                   | GM, SDAPI, SAV, SE, SEC, SEINFRA, SGE, SPOA,  | 
-| NE5  | Criação de DataMarts                                                                      | Infraestrutura Tecnológica                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             | SGE, SPOA,                                    | 
-| NE6  | Digitalização                                                                             | Apoio técnico na configuração dos Infraestruturas de digitalização para o famato exido pelo sistema AFD. Digitalização das pastas funcionais dos servidores do MInC. Necessitamos da Digitalização de Documentos para atender as unidades do MinC quanto aos acervos documentais acumulados nos setores de responsabilidade gerencial dessa área                                                                                                                                                                       | SGE, SPOA,                                    | 
-| NE7  | Equipamentos de Telefonia                                                                 | Necessidade de troca devido ao tempo de uso, incluindo equipamentos de grande porte e pequeno porte.                                                                                                                                                                                                                                                                                                                                                                                                                   | GM, SGE, SPOA,                                | 
-| NE8  | Estabilizador de energia                                                                  | Estabilizadores bivolt para proteção dos comutadores novos                                                                                                                                                                                                                                                                                                                                                                                                                                                             | GM,                                           | 
-| NE9  | HD Externo                                                                                | Facilitar o arquivamento de documentos                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 | SAV, SDC, GM                                  | 
-| NE10 | Headset                                                                                   | Headset com microfone                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  | GM,                                           | 
-| NE11 | Impressoras                                                                               | Aquisição de novos Infraestruturas de impressora, de modo a dotar a Seinfra de mais pontos de impressora. Atualmente, toda a Seinfra possui apenas uma impressora. Com alta capacidade de impressão. Impressora Colorida A4 (outsourcing de impressão). Necessitamos para imprimir, copiar e escanear documentos referentes aos procedimentos de aquisição e contratação de serviços                                                                                                                                   | GM, SAV, SDC, SEC,                            | 
-| NE12 | Monitor LCD                                                                               | Uma segunda tela facilita a análise de processo                                                                                                                                                                                                                                                                                                                                                                                                                                                                        | SE,                                           | 
-| NE13 | Monitores                                                                                 | 22 monitores                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           | SPOA,                                         | 
-| NE14 | No-break                                                                                  | Para os computadores e impressoras, por conta da irregularidade de energia, ocorrendo ocilações e quedas no prédio do Minc, para evitar que os Infraestruturas  venham a danificar e até mesmo para dar continuidade a alguma tarefa de maior urgencia e desligar os Infraestruturas de forma adequada durante esses incidentes de energia.  No-breaks para os Infraestruturas dos sistemas de dados e de telefonia. (Switchs, Digitronco, Modem e Servidor de Apoio)                                                  | GM, SGE,                                      | 
-| NE15 | Notebooks                                                                                 | Notebooks                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              | GM, SDAPI, SAV, SEC,                          | 
-| NE16 | Orquestração de containers virtuais do parque tecnologico                                 | Infraestrutura Tecnológica                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             | SGE, SPOA,                                    | 
-| NE17 | Rack para Switch                                                                          | Rack de chão e que contenha refrigeração.                                                                                                                                                                                                                                                                                                                                                                                                                                                                              | GM,                                           | 
-| NE18 | Rede e internet específicas                                                               | Rede com link dedicado, visando a necessidade de trasmissão ao vivo, coletivas, videoconferências e demais atividades de assessoria de comunicação.                                                                                                                                                                                                                                                                                                                                                                    | GM,                                           | 
-| NE19 | Scanner                                                                                   | Há Necessidade de dois escanners de mesa que digitalizam frente e verso, colorido em um tempo considerado rápido. Com opção de digitalização OCR (PDF Pesquisável). CTAV – Scanners para digitalizar documentos para o sistema SEI e utilização nas áreas de Animação e Comunicação. Scanner de mesa para atendimento ao público                                                                                                                                                                                       | GM, SAV, SDC, SEC, GM                         | 
-| NE20 | Scanners de mesa com reconhecimento de caracteres                                         | Este setor trabalha com muitas respostas a órgãos de controle (oportunidade em que editar arquivos em PDF faz muita diferença para juntar vários documentos em um mesmo arquivo, incluir comentários, realces, caixas de texto, setas); e com a prestação de co                                                                                                                                                                                                                                                        | SDC,                                          | 
-| NE21 | Serviços de Internet                                                                      | Necessitamos dos serviços de internet para realizar os procedimentos de licitação por meio do sistema SEI, Comprasnet, SIASG, SIAFI, entre outros. Além disso, é importante para consultas de preços, materiais, legislações, impedimentos, regularidades, entr                                                                                                                                                                                                                                                        | SPOA,                                         | 
-| NE22 | Serviços de plotagem de documentos em grandes formatos.                                   | Necessidade impressão de documentos e peças gráficas de arquitetura e engenharia em grandes formatos (A0, A1 e A2).                                                                                                                                                                                                                                                                                                                                                                                                    | SEINFRA,                                      | 
-| NE23 | Serviços de Telefonia                                                                     | Necessitamos dos serviços de telefonia para prestar atendimento ao cidadão, aos licitantes e demais áreas demandantes de aquisições e serviços no âmbito do MinC                                                                                                                                                                                                                                                                                                                                                       | SGE, SPOA,                                    | 
-| NE24 | Switch                                                                                    | Um switch de 16 portas, pois o que está sendo utilizado vem apresentando problemas, desligando inesperadamente, travando e outras falhas.                                                                                                                                                                                                                                                                                                                                                                              | GM,                                           | 
-| NE25 | Tablet                                                                                    | Facilitar fiscalização.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                | SEC,                                          | 
-| NE26 | Telefone móvel                                                                            | Necessitamos de alguns desses Infraestruturas para uso em caso de trabalhos realizados remotamente (fora do escritório)                                                                                                                                                                                                                                                                                                                                                                                                | SGE, SPOA,                                    | 
-| NE27 | Videoconferência                                                                          | Disponibilizar 1 (um) Infraestrutura de videoconferência com tela grande e mais recente para a sala de treinamento da CGMOR.                                                                                                                                                                                                                                                                                                                                                                                           | SDAPI, SAV, SDC, SGE,                         | 
-| NE28 | Webcam                                                                                    | WebCam                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 | GM, SDAPI,                                    | 
+| NE1  | Disponibilizar tokens e certificação digital  |  | SGE, SPOA                                    | 
+| NE2  | Aumentar capacidade da caixa de e-mail e do servidor de arquivos              |                                                                                                                                                                                                                                                                              | GM                                           | 
+| NE3  |                                                                   |                                                                                                                                                                                                                                                                                                                     |                                   | 
+| NE4  | Disponibilizar computadores de melhor performance                                                                  |                                                                                                                                                                                                                                                                                                                                                                                    | GM, SDAPI, SAV, SE, SEC, SEINFRA, SGE, SPOA  | 
+| NE5  | Desenvolver DataMarts                                                                      |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              | SGE, SPOA                                    | 
+| NE6  | Apoiar na configuração de infraestrutura de digitalização do sistema AFD                                                                             |                                                                                                                                                                       | SGE, SPOA                                    | 
+| NE7  | Renovar parque de equipamentos de Telefonia                                                                 |                                                                                                                                                                                                                                                                                                                                                                                                                   | GM, SGE, SPOA                                | 
+| NE8  | Disponibilizar estabilizador de energia                                                                  |                                                                                                                                                                                                                                                                                                                                                                                                                                                             | GM                                           | 
+| NE9  | Disponibilizar HD Externo                                                                                |                                                                                                                                                                                                                                                                                                                                                                                                                                                                               | SAV, SDC, GM                                  | 
+| NE10 | Disponibilizar Headset com microfone                                                                                   |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   | GM                                           | 
+| NE11 | Disponibilizar impressoras                                                                               |                                                                                                                                  | GM, SAV, SDC, SEC                            | 
+| NE12 | Disponibilizar monitor adicional                                                                           |                                                                                                                                                                                                                                                                                                                                                                                                                                                                        | SE, SPOA                                           | 
+| NE13 |                                                                                  |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |                                         | 
+| NE14 | Disponinibilizar No-break                                                                                  |                                                   | GM, SGE                                      | 
+| NE15 | Disponinibilizar Notebooks                                                                                 |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               | GM, SDAPI, SAV, SEC                          | 
+| NE16 | Implementar solução de orquestração de containers                                 |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              | SGE                                    | 
+| NE17 | Disponibilizar rack para Switch                                                                          |                                                                                                                                                                                                                                                                                                                                                                                                                                                                              | GM                                           | 
+| NE18 | Disponibilizar rede com link de internet dedicado, visando a necessidade de trasmissão ao vivo, coletivas, videoconferências e demais atividades de assessoria de comunicação                                                                |                                                                                                                                                                                                                                                                                                                                                                    | GM                                           | 
+| NE19 | Disponibilizar Scanners de mesa com reconhecimento de caracteres                                                                                   |                                                                                                                                                                                        | GM, SAV, SDC, SEC, GM                         | 
+| NE20 |                                         |                                                                                                                                                                                                                                            |                                          | 
+| NE21 | Serviços de Internet  ??????????????????????????????                                                                    | Necessitamos dos serviços de internet para realizar os procedimentos de licitação por meio do sistema SEI, Comprasnet, SIASG, SIAFI, entre outros. Além disso, é importante para consultas de preços, materiais, legislações, impedimentos, regularidades, entr                                                                                                                                                                                                                                                        | SPOA                                         | 
+| NE22 | Disponibilizar impressora plotter para impressão de documentos em grandes formatos (A0, A1 e A2)                                   |                                                                                                                                                                                                                                                                                                                                                                                                    | SEINFRA                                      | 
+| NE23 | Serviços de Telefonia   ???????????????????????????????                                                                  | Necessitamos dos serviços de telefonia para prestar atendimento ao cidadão, aos licitantes e demais áreas demandantes de aquisições e serviços no âmbito do MinC                                                                                                                                                                                                                                                                                                                                                       | SGE, SPOA,                                    | 
+| NE24 | Disponibilizar switch                                                                                    |                                                                                                                                                                                                                                                                                                                                                                              | GM                                           | 
+| NE25 | Disponibilizar tablet                                                                                    |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                | SEC                                          | 
+| NE26 | Disponibilizar telefone móvel                                                                            |                                                                                                                                                                                                                                                                                                                                                                                                 | SGE, SPOA                                    | 
+| NE27 | Disponibilizar videoconferência                                                                          |                                                                                                                                                                                                                                                                                                                                                                                            | SDAPI, SAV, SDC, SGE                         | 
+| NE28 | Disponibilizar webCam                                                                                    |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  | GM, SDAPI                                    | 
 
 ### 7.1.3 Necessidade de Contratação de TIC
 
